# CV_rag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/cache/: __init__.py  image_feature_cache.py  redis_client.py  response_cache.py
app/core/: config.py  constants.py  logging.py
app/guardrails/: input_guard.py  intent_classifier.py  output_guard.py  policy.py  retrieval_gate.py  verification.py
app/memory/: conversation.py  summary.py
app/mlops/: __init__.py  tracking.py
app/observability/: __init__.py  metrics.py  tracing.py
app/rag/: __init__.py  chunking.py  context.py  embeddings.py  generation.py  ingestion.py  reranking.py  retrieval.py
app/routers/: admin.py  chat.py  ingest.py
app/schemas/: requests.py  responses.py
app/services/: orchestrator.py
app/utils/: json_parser.py  text.py
app/vision/answer_generation/: answer_generator.py
app/vision/chunking/: image_tiler.py
app/vision/embeddings/: clip_embedder.py  ocr_extractor.py
data/: eval_results.json
docker/: Dockerfile  docker-compose.yml
rag_docs/rag_docs/: DOC1_carrier_sla_agreement.md  DOC2_customs_tariff_reference.md  DOC3_shipment_delay_policy.md  MANUAL_welding_inspection_guide.md  SOP_defect_triage_procedure.md  TAXONOMY_casting_surface_anomalies.md
scripts/: ingest_docs.py  run_eval.py
tests/: conftest.py  test_api.py  test_cache.py  test_chunking.py  test_generation.py  test_guardrails.py  test_memory.py  test_retrieval.py  test_vision.py
tests/fixtures/: test_questions.json
(+4 files in other folders)
